<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/how_to_bet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".MainActivity"
    android:focusable="true">

    <Button
        android:id="@+id/header_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="576dp"
        android:backgroundTint="#F44336"
        android:text="@string/bet_the_retz"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#D61010"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/howToBet_btn"
        android:layout_width="92dp"
        android:layout_height="58dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="477dp"
        android:backgroundTint="#AFAEAE"
        android:text="@string/how_to_bet"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_btn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/promos_btn"
        android:layout_width="104dp"
        android:layout_height="54dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="477dp"
        android:backgroundTint="#AFAEAE"
        android:text="@string/promos"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="61dp"
        android:text="@string/your_bet"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/promos_btn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="64dp"
        android:text="@string/ret_s_bet"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howToBet_btn" />

    <Button
        android:id="@+id/suns_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/suns"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0300"
        app:layout_constraintEnd_toStartOf="@+id/mavericks_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/cardinal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/cardinals"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0300"
        app:layout_constraintEnd_toStartOf="@+id/mavericks_btn"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/mavericks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/mavericks"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/cubs_btn"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/cubs"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0C0300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="96dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#F44336"
        android:text="@string/home"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/myBets_btn"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#F44336"
        android:text="@string/my_bets"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/allSports_btn"
        android:layout_width="75dp"
        android:layout_height="71dp"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F44336"
        android:text="@string/all_sports"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/acct_btn"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="272dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F44336"
        android:text="@string/account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>